re PR tree-optimization/47140 (error: conversion of register to a different size)

PR tree-optimization/47140
	* tree-ssa-ccp.c (evaluate_stmt): For binary assignments, use
	TREE_TYPE (lhs) instead of TREE_TYPE (rhs1) as second argument
	to bit_value_binop.

	* gcc.c-torture/compile/pr47140.c: New test.

From-SVN: r168402